Add --seed command line flag for reproducible mutations
- Added --seed option to CommandLineArgs.java
- Updated ClassRandomizer to accept optional Long seed parameter
- Pass seed from Main.java to ClassRandomizer
- Added tests to verify seed functionality
- Updated documentation (README.md and cli-examples.md) with seed usage examples
- Maintains backwards compatibility (seed is optional)

Co-authored-by: gliptak <50109+gliptak@users.noreply.github.com>